<resources>
    <string name="app_name">AutoFobUser</string>
    <string name="loading">Loading</string>
    <string name="welcome">Welcome</string>
    <string name="fill_your_name_and_your_password">Fill your email and your password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_now">Sign In Now</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="have_an_account">Have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="required">Required</string>
    <string name="not_entered">Not Entered</string>
    <string name="easy">EASY</string>
    <string name="medium">MEDIUM</string>
    <string name="strong">STRONG</string>
    <string name="password_max_length">Password Max Length Reached</string>
    <string name="match">Match</string>
    <string name="not_match">Not Match</string>
    <string name="_12356789">12356789</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="number">Number</string>
    <string name="unknow">Unknown Error accrued</string>
    <string name="password_reset">Password Reset Successfully \n Your new password has been sent to your primary email address.</string>
    <string name="done">Done</string>
    <string name="provide_your">Provide your account\'s email for which you want to reset password</string>
    <string name="continue_">Continue</string>
    <string name="baldino_s_automotive">BALDINO’S Automotive</string>
    <string name="name">Name</string>
    <string name="example_mail_com">example@gmail.com</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="orders">Orders</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="add_car_name">Add Car Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="add">Add</string>
    <string name="add_model">Add Model</string>
    <string name="add_year">Add Year</string>
    <string name="enter_year">Enter Year</string>
    <string name="products">Products</string>
    <string name="_30">$ 30</string>
    <string name="add_product">Add Product</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="availability">Availability</string>
    <string name="battery">Battery</string>
    <string name="add_image">Add Image</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="product_detail">Product Detail</string>
    <string name="fcc">FCC:</string>
    <string name="_8233">377321</string>
    <string name="battery_">Battery:</string>
    <string name="availability_">Availability:</string>
    <string name="reset_password">Reset Password</string>
    <string name="_reset">*******</string>
    <string name="fcc_">FCC</string>
    <string name="edit_product">Edit Product</string>
    <string name="update_image">Update Image</string>
    <string name="upload_dp">Upload</string>
    <string name="cart">Cart</string>
    <string name="my_orders">My Orders</string>
    <string name="make">Make</string>
    <string name="search">Search</string>
    <string name="search_results">Search Results</string>
    <string name="no_result">No result</string>
    <string name="this_picture_">This picture matches my original fob.</string>
    <string name="i_have_checked">I have checked the Vehicle Fitment table below to verify this fob is listed to work with my vehicle.</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="_1">1</string>
    <string name="remove_from_cart">Remove From Cart</string>
    <string name="buy">Buy</string>
    <string name="completed">Completed</string>
    <string name="pending">Pending</string>
    <string name="canceled">Canceled</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="remove_from_cart_">Remove From Cart?</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="cancel_order_">Cancel Order?</string>
    <string name="quantity">Quantity:</string>
    <string name="mark_as_completed">Mark as Completed</string>
    <string name="billing_info">Billing Info</string>
    <string name="street_address">Street Adderss</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="place_order">Place Order</string>
    <string name="company_name">Company Name</string>
    <string name="thank_you_for">Thank you for purchasing our product!</string>
    <string name="pd">Product Detail</string>
    <string name="are_you_sure_to_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reset_password_1">Reset Password?</string>
    <string name="send">Send</string>
    <string name="payment_method">Payment Method</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="about">About</string>
    <string name="delete_account">Delete account?</string>
    <string name="_0">0</string>
    <string name="tracking_number">Tracking Number:</string>
    <string name="please_select_">Please Select the Make, Model and Year of Your Vehicle to Find Your Key FOB</string>
    <string name="your_cart_is_currently_empty">Your Cart is Currently Empty</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="view_profile">View Profile</string>
    <string name="no_internet">No Internet</string>
    <string name="connect">Connect</string>
</resources>