<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />


    <item
        android:id="@+id/menu_my_orders"
        android:icon="@drawable/ic_my_orders"
        android:title="@string/my_orders" />

    <item
        android:id="@+id/menu_payment_method"
        android:visible="false"
        android:icon="@drawable/ic_payment_method"
        android:title="@string/payment_method" />


    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />


    <group android:id="@+id/log">

        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>


</menu>