<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="10dp"
                android:elevation="10dp">

                <ImageView
                    android:layout_width="40sp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_remove_from_cart" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/cancel_order_"
                    android:textColor="@color/black"
                    android:textSize="18sp" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/gray" />
            </RelativeLayout>


            <ImageView
                android:id="@+id/iv_product"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/temp_product" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/open_sans"
                android:gravity="center_horizontal"
                android:hint="@string/orders"
                android:textColor="@color/black" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:weightSum="2">


                <Button
                    android:id="@+id/btn_cancel"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/cancel"
                    android:textColor="@color/green" />


                <Button
                    android:id="@+id/btn_cancel_order"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/remove"
                    android:textColor="@color/red" />


            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>