<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Main.ProductBuyActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            app:title="@string/pd"
            app:navigationIcon="@drawable/ic_back"/>

    </com.google.android.material.appbar.AppBarLayout>





    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/constraintLayout2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/stroke5"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name">

                <ImageView
                    android:id="@+id/iv_product"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/temp_product"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/_30"
                android:textColor="@color/purple_500"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_name" />


            <TextView
                android:id="@+id/tv_product_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/product_detail"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_price"
                app:layout_constraintTop_toBottomOf="@+id/tv_price" />


            <LinearLayout
                android:id="@+id/ll_fcc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@+id/constraintLayout2"
                app:layout_constraintStart_toStartOf="@+id/tv_product_detail"
                app:layout_constraintTop_toBottomOf="@+id/tv_product_detail">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/fcc"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tv_fcc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/_8233"
                    android:textColor="@color/gray"
                    android:textSize="15sp"
                    android:textStyle="bold" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_battery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@+id/constraintLayout2"
                app:layout_constraintStart_toStartOf="@+id/tv_product_detail"
                app:layout_constraintTop_toBottomOf="@+id/ll_fcc">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/battery_"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tv_battery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/_8233"
                    android:textColor="@color/gray"
                    android:textSize="15sp"
                    android:textStyle="bold" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_availability"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@+id/constraintLayout2"
                app:layout_constraintStart_toStartOf="@+id/tv_product_detail"
                app:layout_constraintTop_toBottomOf="@+id/ll_battery">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/availability_"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tv_availability"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/_8233"
                    android:textColor="@color/gray"
                    android:textSize="15sp"
                    android:textStyle="bold" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_agree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
                app:layout_constraintStart_toStartOf="@+id/ll_availability"
                app:layout_constraintTop_toBottomOf="@id/ll_availability"
                tools:ignore="RtlSymmetry">

                <CheckBox
                    android:id="@+id/ck_match"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:buttonTint="@color/purple_500"
                    android:paddingStart="10dp"
                    android:text="@string/this_picture_" />


                <CheckBox
                    android:id="@+id/ck_fitment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="0dp"
                    android:buttonTint="@color/purple_500"
                    android:minHeight="0dp"
                    android:paddingStart="10dp"
                    android:text="@string/i_have_checked" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@+id/ll_agree"
                app:layout_constraintTop_toBottomOf="@+id/ll_agree">


                <ImageView
                    android:id="@+id/iv_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_minus" />


                <com.idialogics.autofobuser.Utils.DigitTextView
                    android:id="@+id/tv_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="10dp"/>


                <ImageView
                    android:id="@+id/iv_plus"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:padding="10dp"
                    android:src="@drawable/ic_plus" />


            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_remove_from_cart"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginVertical="20dp"
                android:background="@drawable/btn_search_bg"
                android:fontFamily="@font/poppins"
                android:paddingHorizontal="15dp"
                android:text="@string/remove_from_cart"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/linearLayout3"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_buy"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginVertical="20dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/btn_search_bg"
                android:fontFamily="@font/poppins"
                android:paddingHorizontal="15dp"
                android:text="@string/buy"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/btn_remove_from_cart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_remove_from_cart" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>