<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="10dp"
                android:elevation="10dp">

                <ImageView
                    android:layout_width="40sp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_forget_password" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/poppins"
                    android:text="@string/reset_password_1"
                    android:textColor="@color/black"
                    android:textSize="18sp" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/gray" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_reset_password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="24dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/poppins"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:weightSum="2">


                <Button
                    android:id="@+id/btn_yes"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins"
                    android:background="@android:color/transparent"
                    android:text="@string/send"
                    android:textColor="@color/red" />


                <Button
                    android:id="@+id/btn_no"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/green" />


            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>