<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="179dp"
    android:background="@color/purple_500"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_user"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/place_holder"
        app:civ_border_color="@color/white"
        app:civ_border_overlay="true"
        app:civ_border_width="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:elevation="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/civ_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/civ_user"
        app:layout_constraintTop_toTopOf="@+id/civ_user">


        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:fontFamily="@font/poppins"
            android:includeFontPadding="false"
            android:maxWidth="180dp"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:fontFamily="@font/poppins"
            android:includeFontPadding="false"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxWidth="180dp"
            android:text="@string/example_mail_com"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </LinearLayout>


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
